--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install dependencies test
       run: |
         python -m pip install --upgrade pip
         pip install pytest
